# atrax

./: .gitignore  pyproject.toml
django_project/: .env.example
django_project/core/: api.py  forms.py  models.py  schema.py  urls.py  views.py
django_project/core/management/commands/: get_reestr.py
django_project/core/migrations/: 0001_initial.py
django_project/core/templates/core/: form.html
django_project/django_project/: settings.py  urls.py
django_project/templates/: base.html
